# rusted_shaders

./: Cargo.toml
assets/shaders/: custom_material.wgsl
src/: lib.rs  main.rs
