[package]
edition = "2021"
name = "rusted_shaders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
debug = false
opt-level = 3

[features]
dev = [
  "bevy/dynamic",
]

[dependencies]
bevy = "0.9.1"
